# marmot-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  SKILL.md  marmot_skill.md  test_runner.py
crates/marmot-agent-cli/: Cargo.toml
crates/marmot-agent-cli/src/: main.rs
crates/marmot-agent-core/: Cargo.toml
crates/marmot-agent-core/src/: context.rs  identity.rs  lib.rs  relay.rs  storage.rs
crates/marmot-agent-ffi/: Cargo.toml
crates/marmot-agent-ffi/src/: lib.rs
crates/marmot-agent-rpc/: Cargo.toml
crates/marmot-agent-rpc/src/: lib.rs  server.rs
docs/: HANDOFF.md  PLAN.md  TODO.md
