[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Taymur Khumush <taymur@tkhumush.com>"]
license = "MIT"
repository = "https://github.com/tkhumush/marmot-cli"
keywords = ["marmot", "mls", "nostr", "messaging", "agent"]
categories = ["command-line-utilities", "cryptography", "network-programming"]
rust-version = "1.90.0"

[workspace.dependencies]
nostr = { version = "0.40", default-features = false, features = ["std", "nip04", "nip59"] }
nostr-relay-pool = "0.40"
mdk-core = { git = "https://github.com/marmot-protocol/mdk.git", branch = "main" }
mdk-memory-storage = { git = "https://github.com/marmot-protocol/mdk.git", branch = "main" }
mdk-storage-traits = { git = "https://github.com/marmot-protocol/mdk.git", branch = "main" }
mdk-sqlite-storage = { git = "https://github.com/marmot-protocol/mdk.git", branch = "main" }
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
hex = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }